Dockerfile 新增jvm监控